@@ -98,6 +98,10 @@ char	*memset();
 # endif /* !sun */
 #endif
 
+/* Un-comment this if you're on a filesystem that doesn't support
+ * filenames longer than 14 characters */
+/* HBB FIXME 20030302: should have an autoconf test for this: */
+/* #define SHORT_NAMES_ONLY */
 
 /* Just in case autoconf didn't correctly flag HAVE_FIXKEYPAD */
 #ifndef HAVE_FIXKEYPAD 
